<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>super-devops-ci-core</artifactId>
	<packaging>jar</packaging>
	<name>Super DevOps CI Core</name>
	<url>http://maven.apache.org</url>
	<parent>
		<groupId>com.wl4g</groupId>
		<artifactId>super-devops-ci</artifactId>
		<version>master</version>
		<relativePath>../pom.xml</relativePath>
	</parent>
	<properties>
		<java.version>1.8</java.version>
		<maven-source-plugin.version>2.4</maven-source-plugin.version>
		<maven-gpg-plugin.version>1.0</maven-gpg-plugin.version>
		<mysql.version>5.1.21</mysql.version>
		<pagehelper.version>4.1.6</pagehelper.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>com.wl4g</groupId>
			<artifactId>super-devops-support</artifactId>
			<version>master</version>
		</dependency>
		<dependency>
			<groupId>com.wl4g</groupId>
			<artifactId>super-devops-shell-cli</artifactId>
			<version>master</version>
		</dependency>
		<dependency>
			<groupId>com.wl4g</groupId>
			<artifactId>super-devops-dao</artifactId>
			<version>master</version>
		</dependency>
		<dependency>
			<groupId>com.wl4g</groupId>
			<artifactId>super-devops-shell-core</artifactId>
			<version>master</version>
		</dependency>
		<dependency>
			<groupId>org.mybatis.spring.boot</groupId>
			<artifactId>mybatis-spring-boot-starter</artifactId>
			<version>1.3.2</version>
		</dependency>
		<dependency>
			<groupId>com.github.pagehelper</groupId>
			<artifactId>pagehelper</artifactId>
			<version>${pagehelper.version}</version>
		</dependency>
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>fastjson</artifactId>
			<version>1.2.56</version>
		</dependency>
		<!-- SSH2 -->
		<dependency>
			<groupId>ch.ethz.ganymed</groupId>
			<artifactId>ganymed-ssh2</artifactId>
			<version>262</version>
		</dependency>
		<!-- GIT -->
		<dependency>
			<groupId>org.eclipse.jgit</groupId>
			<artifactId>org.eclipse.jgit</artifactId>
			<version>5.3.1.201904271842-r</version>
		</dependency>
		<dependency>
			<groupId>org.quartz-scheduler</groupId>
			<artifactId>quartz</artifactId>
			<version>2.2.2</version>
			<scope>compile</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven-source-plugin.version}</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>